deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: app
        image: registry.cluster.wik.cloud/public/echo
        ports:  
        - containerPort : 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
