pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod
  namespace: app
spec:
  containers:
  - name: app
    image: registry.cluster.wik.cloud/public/echo
    ports:  
        - containerPort : 8080
