service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: app
spec:
  selector:
    app: myapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
